2016-XX-XX  Lcferrum <lcferrum@yandex.com>
	
	* Release 2.1
	* Changed:
		- Redesigned /inr and /fgd switches
		- Revamped output
		- Arguments starting with '#' or '\0' are now ignored
		- Path comparing now omits backslash from globbing
		- /sec now indifferent to loop (+l/-l) and ignore (+i/-i) settings
		- Test setting (+t/-t) now doesn't mark result processes as killed
	* Fixed:
		- Fixed sending ENTER to wrong console for windowless (hidden) version
	* Added:
		- /cmd switch (load arguments from file)
		- /lst switch (show and manage process list)
		- +r/-r setting (recently added sorting)
		- +m/-m setting (mute stdout output)
		- +b/-b setting (blacklist results)
		- +w/-w setting (whitelist results)
		- +n/-n setting (continue on negative)
	* Removed:
		- /blk switch (use +b/-b setting instead)

2016-04-15  Lcferrum <lcferrum@yandex.com>
	
	* Release 2.0
	* Changed:
		- Major refactoring, new object-oriented structure, moved to C++11 standard and UNICODE API
		- Better process usage and killing algorithms
		- Renamed 'ghost' parameter to 'vista' for /inr switch
		- /fsc switch revamped, now works with multi-monitor setups and has new parameters
		- Can now pass multiple wildcards to switches
		- All path comparing is now case-insensitive
	* Added:
		- Windows NT4 support
		- Clang compiler support
		- Limited support for console output with windowless (hidden) version
		- /fgd switch (kill process with foreground window)
		- /pid switch (kill by PID)
		- /blk switch (add to blacklist)
		- /mod switch (kill by module name)
		- +i/-i setting (ignore switch result and continue execution)
		- +l/-l setting (loop switch)
	* Removed:
		- MSVC compiler support
		- /d2d switch (kill DirectDraw process)
		- 'strict' and 'soft' parameters from /ogl, /d3d and /gld switches
		- 'lcase' parameter from /pth switch
		- +k/-k setting (press any key, instead ENTER, on verbose)

2013-03-01  Lcferrum <lcferrum@yandex.com>
	
	* Release 1.1
	* Added 64-bit support